# TutorialsAndExercices

./: README.md
Exercices/GUI/C++/: CMakeLists.txt  DaughterWindow.cxx  DaughterWindow.h  GUI.cxx  MotherWindow.ui
Exercices/Smooth/C++/: CMakeLists.txt  smooth.cxx
Exercices/Smooth/Data/Input/: mesh.vtk
Exercices/Threshold/: .Threshold.cxx.swp
Exercices/Threshold/C++/: CMakeLists.txt  Threshold.cxx  Threshold.xml
Exercices/Threshold/Data/Input/: inputT2.nrrd
Exercices/Threshold/Python/: threshold.py
